--- a/src/MEGASync/gui/linux/LowDiskSpaceDialog.ui
+++ b/src/MEGASync/gui/linux/LowDiskSpaceDialog.ui
@@ -92,7 +92,7 @@ QPushButton {
           <string notr="true"/>
          </property>
          <property name="pixmap">
-          <pixmap resource="../Resources_linux.qrc">:/images/drive-low-space.svg</pixmap>
+          <pixmap resource="../Resources_common.qrc">:/images/drive-low-space.svg</pixmap>
          </property>
          <property name="scaledContents">
           <bool>true</bool>
