--- a/src/MEGASync/gui/node_selector/gui/macx/NodeSelector.ui
+++ b/src/MEGASync/gui/node_selector/gui/macx/NodeSelector.ui
@@ -311,7 +311,7 @@ min-height:36px;
                <string notr="true">Cloud Drive</string>
               </property>
               <property name="icon">
-               <iconset theme="cloud_ico" resource="../../../Resources_macx.qrc">
+               <iconset theme="cloud_ico" resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/cloud_ico_default.png</normaloff>:/images/node_selector/sidebar/cloud_ico_default.png</iconset>
               </property>
               <property name="checkable">
@@ -395,7 +395,7 @@ min-height:36px;
                <string notr="true">Backups</string>
               </property>
               <property name="icon">
-               <iconset theme="backups_ico" resource="../../../Resources_macx.qrc">
+               <iconset theme="backups_ico" resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/backup_ico_default.png</normaloff>:/images/node_selector/sidebar/backup_ico_default.png</iconset>
               </property>
               <property name="checkable">
@@ -494,7 +494,7 @@ min-height:36px;
                <string notr="true">Incoming Shares</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_win.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/folder-users_default.png</normaloff>:/images/node_selector/sidebar/folder-users_default.png</iconset>
               </property>
               <property name="checkable">
@@ -550,7 +550,7 @@ min-height:36px;
                <string notr="true">Rubbish bin</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_macx.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/rubbish_default.png</normaloff>:/images/node_selector/sidebar/rubbish_default.png</iconset>
               </property>
               <property name="checkable">
@@ -642,7 +642,7 @@ min-height:36px;
                <string notr="true"/>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_macx.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/search_default.png</normaloff>:/images/node_selector/sidebar/search_default.png</iconset>
               </property>
               <property name="checkable">
@@ -675,7 +675,7 @@ padding-right:1px;
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_macx.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -727,7 +727,7 @@ padding-right:1px;
   </layout>
  </widget>
  <resources>
-  <include location="../../../Resources_macx.qrc"/>
+  <include location="../../../Resources_common.qrc"/>
  </resources>
  <connections/>
  <buttongroups>
