--- a/src/MEGASync/transfers/gui/linux/TransfersWidget.ui
+++ b/src/MEGASync/transfers/gui/linux/TransfersWidget.ui
@@ -487,7 +487,7 @@ QMenu::item:default
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../../gui/Resources_linux.qrc">
+                <iconset resource="../../../gui/Resources_common.qrc">
                  <normaloff>:/images/transfer_manager/transfers_actions/lists_pause_all_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_pause_all_ico_default.png</iconset>
                </property>
                <property name="iconSize">
@@ -576,7 +576,7 @@ QMenu::item:default
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../../gui/Resources_linux.qrc">
+                <iconset resource="../../../gui/Resources_common.qrc">
                  <normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_all_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_all_ico_default.png</iconset>
                </property>
                <property name="iconSize">
@@ -714,7 +714,7 @@ QMenu::item:default
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../../gui/Resources_linux.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
