--- a/src/MEGASync/transfers/gui/macx/TransferManagerDelegateWidget.ui
+++ b/src/MEGASync/transfers/gui/macx/TransferManagerDelegateWidget.ui
@@ -1147,7 +1147,7 @@ QProgressBar::chunk
              </size>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_macx.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/transfers_actions/lists_pause_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_pause_ico_default.png</iconset>
             </property>
            </widget>
@@ -1206,7 +1206,7 @@ QProgressBar::chunk
              </size>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_macx.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_ico_default.png</iconset>
             </property>
            </widget>
@@ -1221,7 +1221,7 @@ QProgressBar::chunk
   </layout>
  </widget>
  <resources>
-  <include location="../../../gui/Resources_macx.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
