--- a/src/MEGASync/transfers/gui/macx/TransfersWidget.ui
+++ b/src/MEGASync/transfers/gui/macx/TransfersWidget.ui
@@ -437,7 +437,7 @@ TransferWidgetHeaderItem  QLabel
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../../gui/Resources_macx.qrc">
+                <iconset resource="../../../gui/Resources_common.qrc">
                  <normaloff>:/images/transfer_manager/transfers_actions/lists_pause_all_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_pause_all_ico_default.png</iconset>
                </property>
                <property name="iconSize">
@@ -523,7 +523,7 @@ TransferWidgetHeaderItem  QLabel
                 <string notr="true"/>
                </property>
                <property name="icon">
-                <iconset resource="../../../gui/Resources_macx.qrc">
+                <iconset resource="../../../gui/Resources_common.qrc">
                  <normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_all_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_all_ico_default.png</iconset>
                </property>
                <property name="iconSize">
@@ -679,7 +679,7 @@ QScrollBar::handle:vertical
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../../gui/Resources_macx.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
