--- a/src/MEGASync/transfers/gui/win/TransfersSummaryWidget.ui
+++ b/src/MEGASync/transfers/gui/win/TransfersSummaryWidget.ui
@@ -130,7 +130,7 @@ background: rgba(0,0,0,0.01);
       <string/>
      </property>
      <property name="icon">
-      <iconset resource="../../../gui/Resources_win.qrc">
+      <iconset resource="../../../gui/Resources_common.qrc">
        <normaloff>:/images/pause.png</normaloff>:/images/pause.png</iconset>
      </property>
     </widget>
@@ -146,7 +146,7 @@ background: rgba(0,0,0,0.01);
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../../gui/Resources_win.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
