--- a/src/MEGASync/gui/node_selector/gui/win/NodeSelector.ui
+++ b/src/MEGASync/gui/node_selector/gui/win/NodeSelector.ui
@@ -298,7 +298,7 @@ min-height:40px;
                <string notr="true">Cloud Drive</string>
               </property>
               <property name="icon">
-               <iconset theme="cloud_ico" resource="../../../Resources_win.qrc">
+               <iconset theme="cloud_ico" resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/cloud_ico_default.png</normaloff>:/images/node_selector/sidebar/cloud_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -388,7 +388,7 @@ min-height:40px;
                <string notr="true">Backups</string>
               </property>
               <property name="icon">
-               <iconset theme="backups_ico" resource="../../../Resources_win.qrc">
+               <iconset theme="backups_ico" resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/backup_ico_default.png</normaloff>:/images/node_selector/sidebar/backup_ico_default.png</iconset>
               </property>
               <property name="checkable">
@@ -487,7 +487,7 @@ min-height:40px;
                <string notr="true">Incoming Shares</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_win.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/folder-users_default.png</normaloff>:/images/node_selector/sidebar/folder-users_default.png</iconset>
               </property>
               <property name="checkable">
@@ -549,7 +549,7 @@ min-height:40px;
                <string notr="true">Rubbish bin</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_win.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/rubbish_default.png</normaloff>:/images/node_selector/sidebar/rubbish_default.png</iconset>
               </property>
               <property name="checkable">
@@ -641,7 +641,7 @@ min-height:40px;
                <string notr="true"/>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_win.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/node_selector/sidebar/search_default.png</normaloff>:/images/node_selector/sidebar/search_default.png</iconset>
               </property>
               <property name="checkable">
@@ -674,7 +674,7 @@ padding-right:1px;
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../../Resources_win.qrc">
+               <iconset resource="../../../Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -726,7 +726,7 @@ padding-right:1px;
   </layout>
  </widget>
  <resources>
-  <include location="../../../Resources_win.qrc"/>
+  <include location="../../../Resources_common.qrc"/>
  </resources>
  <connections/>
  <buttongroups>
