--- a/src/MEGASync/gui/win/ChangeLogDialog.ui
+++ b/src/MEGASync/gui/win/ChangeLogDialog.ui
@@ -121,7 +121,7 @@ background-color: #FFFFFF;
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../Resources_win.qrc">
+         <iconset resource="../Resources_common.qrc">
           <normaloff>:/images/app_64.png</normaloff>:/images/app_64.png</iconset>
         </property>
         <property name="iconSize">
@@ -534,7 +534,7 @@ border-bottom: 1px solid #EFEFEC;
   <tabstop>bPolicy</tabstop>
  </tabstops>
  <resources>
-  <include location="../Resources_win.qrc"/>
+  <include location="../Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
