--- a/src/MEGASync/gui/win/StreamingFromMegaDialog.ui
+++ b/src/MEGASync/gui/win/StreamingFromMegaDialog.ui
@@ -631,7 +631,7 @@ padding-left: -16px;</string>
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../Resources_win.qrc">
+                  <iconset resource="../Resources_common.qrc">
                    <normaloff>:/images/streaming_link.png</normaloff>:/images/streaming_link.png</iconset>
                  </property>
                  <property name="iconSize">
@@ -783,7 +783,7 @@ padding-left: -16px;</string>
          <string notr="true"/>
         </property>
         <property name="icon">
-         <iconset resource="../Resources_win.qrc">
+         <iconset resource="../Resources_common.qrc">
           <normaloff>:/images/icon_error.png</normaloff>:/images/icon_error.png</iconset>
         </property>
         <property name="iconSize">
@@ -847,7 +847,7 @@ padding-left: -16px;</string>
   <tabstop>bClose</tabstop>
  </tabstops>
  <resources>
-  <include location="../Resources_win.qrc"/>
+  <include location="../Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
