--- a/src/MEGASync/transfers/gui/linux/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/linux/TransferManager.ui
@@ -681,7 +681,7 @@ QToolButton
                <enum>Qt::StrongFocus</enum>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/sidebar_pause_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_pause_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -722,7 +722,7 @@ QToolButton
                <string>Search</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/sidebar_search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_search_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -764,7 +764,7 @@ QToolButton
                </sizepolicy>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</iconset>
               </property>
              </widget>
@@ -794,7 +794,7 @@ QToolButton
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -875,7 +875,7 @@ QToolButton
                  <string>All transfers</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_linux.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/all_transfers_ico_default.png</normaloff>:/images/transfer_manager/sidebar/all_transfers_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -956,7 +956,7 @@ QToolButton
                  <string>Downloads</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_linux.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/downloads_ico_default.png</normaloff>:/images/transfer_manager/sidebar/downloads_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1034,7 +1034,7 @@ QToolButton
                  <string>Uploads</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_linux.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/uploads_ico_default.png</normaloff>:/images/transfer_manager/sidebar/uploads_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1115,7 +1115,7 @@ QToolButton
                  <string>Completed</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_linux.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/finished_ico_default.png</normaloff>:/images/transfer_manager/sidebar/finished_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1196,7 +1196,7 @@ QToolButton
                  <string>Failed</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_linux.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/sidebar_failed_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_failed_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1310,7 +1310,7 @@ QToolButton
                  <string notr="true"/>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_linux.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/search_result_default.png</normaloff>:/images/transfer_manager/sidebar/search_result_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1333,7 +1333,7 @@ QToolButton
                  <string/>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_linux.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
                 </property>
                 <property name="default_icon" stdset="0">
@@ -1639,7 +1639,7 @@ QToolButton
                <string>Up to date</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/up_to_date_ico.png</normaloff>:/images/transfer_manager/sidebar/up_to_date_ico.png</iconset>
               </property>
               <property name="iconSize">
@@ -1690,7 +1690,7 @@ QToolButton
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -2069,7 +2069,7 @@ QToolButton
                <string>Open links</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2086,7 +2086,7 @@ QToolButton
                <string>Upload</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2103,7 +2103,7 @@ QToolButton
                <string>Download</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2117,7 +2117,7 @@ QToolButton
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_linux.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2530,7 +2530,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_linux.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</iconset>
             </property>
            </widget>
@@ -2616,7 +2616,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_linux.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</iconset>
             </property>
            </widget>
@@ -2663,7 +2663,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_linux.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</iconset>
             </property>
            </widget>
@@ -2710,7 +2710,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_linux.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</iconset>
             </property>
            </widget>
@@ -2783,7 +2783,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_linux.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</iconset>
             </property>
            </widget>
@@ -2890,7 +2890,7 @@ QToolButton
   <tabstop>tSearchCancel</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../gui/Resources_linux.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections>
   <connection>
