--- a/src/MEGASync/transfers/gui/linux/TransfersStatusWidget.ui
+++ b/src/MEGASync/transfers/gui/linux/TransfersStatusWidget.ui
@@ -47,7 +47,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../../../gui/Resources_linux.qrc">
+    <iconset resource="../../../gui/Resources_common.qrc">
      <normaloff>:/images/transfer_manager.png</normaloff>:/images/transfer_manager.png</iconset>
    </property>
    <property name="iconSize">
@@ -68,7 +68,7 @@
   </widget>
  </widget>
  <resources>
-  <include location="../../../gui/Resources_linux.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
