--- a/src/MEGASync/transfers/gui/macx/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/macx/TransferManager.ui
@@ -703,7 +703,7 @@ QToolButton
                <bool>false</bool>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/sidebar_pause_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_pause_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -744,7 +744,7 @@ QToolButton
                <string>Search</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/sidebar_search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_search_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -786,7 +786,7 @@ QToolButton
                </sizepolicy>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -834,7 +834,7 @@ QToolButton
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -921,7 +921,7 @@ QToolButton
                  <string>All transfers</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_macx.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/all_transfers_ico_default.png</normaloff>:/images/transfer_manager/sidebar/all_transfers_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1002,7 +1002,7 @@ QToolButton
                  <string>Downloads</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_macx.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/downloads_ico_default.png</normaloff>:/images/transfer_manager/sidebar/downloads_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1080,7 +1080,7 @@ QToolButton
                  <string>Uploads</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_macx.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/uploads_ico_default.png</normaloff>:/images/transfer_manager/sidebar/uploads_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1161,7 +1161,7 @@ QToolButton
                  <string>Completed</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_macx.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/finished_ico_default.png</normaloff>:/images/transfer_manager/sidebar/finished_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1242,7 +1242,7 @@ QToolButton
                  <string>Failed</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_macx.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/sidebar_failed_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_failed_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1356,7 +1356,7 @@ QToolButton
                  <string notr="true"/>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_macx.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/search_result_default.png</normaloff>:/images/transfer_manager/sidebar/search_result_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1391,7 +1391,7 @@ QToolButton
                  <string/>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_macx.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
                 </property>
                 <property name="default_icon" stdset="0">
@@ -1685,7 +1685,7 @@ QToolButton
                <string>Up to date</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/up_to_date_ico.png</normaloff>:/images/transfer_manager/sidebar/up_to_date_ico.png</iconset>
               </property>
               <property name="iconSize">
@@ -1736,7 +1736,7 @@ QToolButton
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -2139,7 +2139,7 @@ QToolButton
                <string>Open links</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2156,7 +2156,7 @@ QToolButton
                <string>Upload</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2173,7 +2173,7 @@ QToolButton
                <string>Download</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2187,7 +2187,7 @@ QToolButton
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_macx.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2617,7 +2617,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_macx.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</iconset>
             </property>
            </widget>
@@ -2651,7 +2651,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_macx.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</iconset>
             </property>
            </widget>
@@ -2724,7 +2724,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_macx.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</iconset>
             </property>
            </widget>
@@ -2771,7 +2771,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_macx.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</iconset>
             </property>
            </widget>
@@ -2844,7 +2844,7 @@ QToolButton
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_macx.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</iconset>
             </property>
            </widget>
@@ -2948,7 +2948,7 @@ QToolButton
   <tabstop>tSearchCancel</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../gui/Resources_macx.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections>
   <connection>
