--- a/src/MEGASync/transfers/gui/win/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/win/TransferManager.ui
@@ -643,7 +643,7 @@ QGroupBox::title
                <enum>Qt::StrongFocus</enum>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_win.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/sidebar_pause_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_pause_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -687,7 +687,7 @@ QGroupBox::title
                <string>Search</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_win.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/sidebar_search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_search_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -732,7 +732,7 @@ QGroupBox::title
                </sizepolicy>
               </property>
               <property name="icon">
-               <iconset theme="search_ico" resource="../../../gui/Resources_win.qrc">
+               <iconset theme="search_ico" resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/search_ico_default.png</iconset>
               </property>
               <property name="checkable">
@@ -765,7 +765,7 @@ QGroupBox::title
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset theme="delete_search_ico" resource="../../../gui/Resources_win.qrc">
+               <iconset theme="delete_search_ico" resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -859,7 +859,7 @@ QGroupBox::title
                  <string>All transfers</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_win.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/all_transfers_ico_default.png</normaloff>:/images/transfer_manager/sidebar/all_transfers_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -954,7 +954,7 @@ QGroupBox::title
                  <string>Downloads</string>
                 </property>
                 <property name="icon">
-                 <iconset theme="downloads_ico" resource="../../../gui/Resources_win.qrc">
+                 <iconset theme="downloads_ico" resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/downloads_ico_default.png</normaloff>:/images/transfer_manager/sidebar/downloads_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1039,7 +1039,7 @@ QGroupBox::title
                  <string>Uploads</string>
                 </property>
                 <property name="icon">
-                 <iconset theme="uploads_ico" resource="../../../gui/Resources_win.qrc">
+                 <iconset theme="uploads_ico" resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/uploads_ico_default.png</normaloff>:/images/transfer_manager/sidebar/uploads_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1127,7 +1127,7 @@ QGroupBox::title
                  <string>Completed</string>
                 </property>
                 <property name="icon">
-                 <iconset theme="finished_ico" resource="../../../gui/Resources_win.qrc">
+                 <iconset theme="finished_ico" resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/finished_ico_default.png</normaloff>:/images/transfer_manager/sidebar/finished_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1215,7 +1215,7 @@ QGroupBox::title
                  <string>Failed</string>
                 </property>
                 <property name="icon">
-                 <iconset resource="../../../gui/Resources_win.qrc">
+                 <iconset resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/sidebar_failed_ico_default.png</normaloff>:/images/transfer_manager/sidebar/sidebar_failed_ico_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1329,7 +1329,7 @@ QGroupBox::title
                  <string notr="true"/>
                 </property>
                 <property name="icon">
-                 <iconset theme="search_result" resource="../../../gui/Resources_win.qrc">
+                 <iconset theme="search_result" resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/search_result_default.png</normaloff>:/images/transfer_manager/sidebar/search_result_default.png</iconset>
                 </property>
                 <property name="checkable">
@@ -1352,7 +1352,7 @@ QGroupBox::title
                  <string/>
                 </property>
                 <property name="icon">
-                 <iconset theme="delete_search" resource="../../../gui/Resources_win.qrc">
+                 <iconset theme="delete_search" resource="../../../gui/Resources_common.qrc">
                   <normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</normaloff>:/images/transfer_manager/sidebar/delete_search_result_default.png</iconset>
                 </property>
                 <property name="default_icon" stdset="0">
@@ -1649,7 +1649,7 @@ QGroupBox::title
                <string>Up to date</string>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_win.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/up_to_date_ico.png</normaloff>:/images/transfer_manager/sidebar/up_to_date_ico.png</iconset>
               </property>
               <property name="iconSize">
@@ -1700,7 +1700,7 @@ QGroupBox::title
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../../gui/Resources_win.qrc">
+               <iconset resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</normaloff>:/images/transfer_manager/sidebar/cancel_all_ico_default.png</iconset>
               </property>
               <property name="iconSize">
@@ -2115,7 +2115,7 @@ QGroupBox::title
                <string>Open links</string>
               </property>
               <property name="icon">
-               <iconset theme="import_toolbar_ico" resource="../../../gui/Resources_win.qrc">
+               <iconset theme="import_toolbar_ico" resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/import_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2132,7 +2132,7 @@ QGroupBox::title
                <string>Upload</string>
               </property>
               <property name="icon">
-               <iconset theme="upload_toolbar_ico" resource="../../../gui/Resources_win.qrc">
+               <iconset theme="upload_toolbar_ico" resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/upload_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2149,7 +2149,7 @@ QGroupBox::title
                <string>Download</string>
               </property>
               <property name="icon">
-               <iconset theme="download_toolbar_ico" resource="../../../gui/Resources_win.qrc">
+               <iconset theme="download_toolbar_ico" resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/download_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2163,7 +2163,7 @@ QGroupBox::title
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
               <property name="icon">
-               <iconset theme="preferences_toolbar_ico" resource="../../../gui/Resources_win.qrc">
+               <iconset theme="preferences_toolbar_ico" resource="../../../gui/Resources_common.qrc">
                 <normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</normaloff>:/images/transfer_manager/toolbar/preferences_toolbar_ico_default.png</iconset>
               </property>
               <property name="default_icon" stdset="0">
@@ -2638,7 +2638,7 @@ QGroupBox::title
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_win.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</normaloff>:/images/transfer_manager/empty_categories/no_uploads.png</iconset>
             </property>
            </widget>
@@ -2675,7 +2675,7 @@ QGroupBox::title
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_win.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</normaloff>:/images/transfer_manager/empty_categories/no_downloads.png</iconset>
             </property>
            </widget>
@@ -2735,7 +2735,7 @@ QGroupBox::title
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_win.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</normaloff>:/images/transfer_manager/empty_categories/no_transfers.png</iconset>
             </property>
            </widget>
@@ -2818,7 +2818,7 @@ QGroupBox::title
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_win.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</normaloff>:/images/transfer_manager/empty_categories/no_search_results.png</iconset>
             </property>
            </widget>
@@ -2868,7 +2868,7 @@ QGroupBox::title
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_win.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</normaloff>:/images/transfer_manager/empty_categories/Completed_transfers.png</iconset>
             </property>
            </widget>
@@ -2975,7 +2975,7 @@ QGroupBox::title
   <tabstop>leSearchField</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../gui/Resources_win.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections>
   <connection>
