--- a/src/MEGASync/transfers/gui/win/TransferManagerDelegateWidget.ui
+++ b/src/MEGASync/transfers/gui/win/TransferManagerDelegateWidget.ui
@@ -1168,7 +1168,7 @@ QProgressBar::chunk
              </size>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_win.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/transfers_actions/lists_pause_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_pause_ico_default.png</iconset>
             </property>
             <property name="iconSize">
@@ -1233,7 +1233,7 @@ QProgressBar::chunk
              </size>
             </property>
             <property name="icon">
-             <iconset resource="../../../gui/Resources_win.qrc">
+             <iconset resource="../../../gui/Resources_common.qrc">
               <normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_ico_default.png</normaloff>:/images/transfer_manager/transfers_actions/lists_cancel_ico_default.png</iconset>
             </property>
             <property name="iconSize">
@@ -1254,7 +1254,7 @@ QProgressBar::chunk
   </layout>
  </widget>
  <resources>
-  <include location="../../../gui/Resources_win.qrc"/>
+  <include location="../../../gui/Resources_common.qrc"/>
  </resources>
  <connections/>
 </ui>
